# sciare

./: Cargo.toml  README.md
.sqlx/: query-39f7998a00e2767b359a2f44d840500d9cf4340e6b9d678b5803f00988f4b981.json  query-4086291a9ec490c22ab34ac05fac670074af20b4cb8d996f59029d248d7c5afe.json  query-73bb358f6ac780b3982c42c910c9a0972bbe1a92eabe08f2bf3b481b48556410.json  query-7d17de7a894d8ae14d657af5c8660a2dcad95063488525811829ea83d2d5a82d.json  query-7f9e228a956abee062fe4452f0277b7b8416418ef8e08260cd6f9fd37c08ffe4.json  query-921faa4e3a499bdc1bdc9e00c9e68d9c3ea9da998020b6e88f83a0b9bff0ae75.json  query-d3a36eeb8731a44e00add8e764728131303889e3465c4837baecfe45ef69b719.json  query-f6008fefc21950d6aec8a44e999a9a1859e577c65f8cc86d6b41e7166e54badb.json
migrations/: 0001_documents.sql
src/: config.rs  lib.rs  main.rs
